# embedded_rust_journey

./: Cargo.toml  README.md  rust-toolchain.toml
hello-low-lvl-gang/: Cargo.toml
hello-low-lvl-gang/src/: main.rs
seven_seg/: Cargo.toml
seven_seg/src/: main.rs
